--- a/pages/home/index.wxss
+++ b/pages/home/index.wxss
@@ -29,7 +29,7 @@
   flex:1;
   margin-right: 11rpx;
 }
-.rc_reserve_section cover-image{
+.rc_reserve_section image{
   width: 336rpx;
   height: 241rpx;
 }
@@ -63,6 +63,11 @@
   height: 20rpx;
   margin-top: 18rpx;
 }
+.more image{
+  width: 100%;
+  height: 100%;
+  vertical-align: top;
+}
 
 .rc_news .news-list-box .news-list{
   min-height: 474rpx;
@@ -74,6 +79,10 @@
   width: 100%;
   height: 270rpx;
   margin-bottom: 30rpx;
+}
+.new-banner image{
+  height: 100%;
+  width: 100%;
 }
 .news-list .new-title{
   display: block;
@@ -101,3 +110,36 @@
 .rc_search .weui-search-bar__label{
   background: #f2f2f2;
 } */
+
+
+
+
+.maskCode{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.toast_centerCode{
+  position: relative;
+  width: 686rpx;
+  height: 678rpx;
+  border-radius:10rpx;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+  padding:60rpx 40rpx 40rpx 40rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.icon-quxiao1{
+  position: absolute;
+  top:27rpx;
+  right: 27rpx;
+  font-size: 28rpx;
+  color: RGBA(153, 153, 153, 1);
+}
