--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -6,7 +6,7 @@
         <block wx:for="{{background}}" wx:key="unique">
           <swiper-item>
             <view class="swiper-item">
-              <image src="../../images/home/JM-home_banner.png"></image>
+              <image src="../../images/home/JM-home_banner.png" mode="aspectFill"></image>
             </view>
           </swiper-item>
         </block>
@@ -15,13 +15,13 @@
 
     <view class="rc_reserve">
       <navigator open-type="switchTab"  url="/pages/reservation/index" class="rc_reserve_section">
-        <cover-image src="../../images/home/JM-home_yuyue_01.png"></cover-image>
+        <image src="../../images/home/JM-home_yuyue_01.png" mode="scaleToFill"></image>
       </navigator>
       <navigator url="/pages/placeinfo/index" class="rc_reserve_section">
-        <cover-image src="../../images/home/JM-home_yuyue_02.png"></cover-image>
+        <image src="../../images/home/JM-home_yuyue_02.png" mode="scaleToFill"></image>
       </navigator>
       <!-- <view class="rc_reserve_section" bindtap="goPlace">
-        <cover-image src="../../images/home/JM-home_yuyue_02.png"></cover-image>
+        <image src="../../images/home/JM-home_yuyue_02.png"></image>
       </view> -->
     </view>
   </view>
@@ -30,24 +30,32 @@
     <view class="news-title clearfix">
       <view class="title fl">最新资讯</view>
       <view class="more fr">
-        <cover-image src="../../images/home/more.png"></cover-image>
+        <image src="../../images/home/more.png" mode="scaleToFill" ></image>
       </view>
     </view>
     <view class="news-list-box">
       <view class="news-list">
         <view class="new-banner">
-          <cover-image src="../../images/home/JM-home_banner_new_01.png"></cover-image>
+          <image src="../../images/home/JM-home_banner_new_01.png" mode="aspectFill"></image>
         </view>
         <text class="new-title">点燃赛场，火热报名中</text>
         <text class="new-desc">本月25日将于全市举办llllll火风暴杯热血拉力争霸赛，本月25日将于全市举办llllll火风暴杯热血拉力争霸赛，</text>
       </view>
       <view class="news-list">
         <view class="new-banner">
-          <cover-image src="../../images/home/JM-home_banner_new_01.png"></cover-image>
+          <image src="../../images/home/JM-home_banner_new_01.png" mode="aspectFill"></image>
         </view>
         <text class="new-title">点燃赛场，火热报名中</text>
         <text class="new-desc">本月25日将于全市举办llllll火风暴杯热血拉力争霸赛，本月25日将于全市举办llllll火风暴杯热血拉力争霸赛，</text>
       </view>
     </view>
+  </view>
+</view>
+
+<view class='maskCode' wx:if="{{!hasUserInfo}}">
+  <view class='toast_centerCode'>
+    <text class='iconfont icon-quxiao1' bindtap='hideMask'>x</text>
+    <button open-type='getUserInfo' class='start_btn' lang="zh_CN" 
+    bindgetuserinfo="onGotUserInfo" hover-class='none'>授权登录</button>
   </view>
 </view>
