--- a/pages/reservation_my_detail/index.wxml
+++ b/pages/reservation_my_detail/index.wxml
@@ -1,3 +1,4 @@
+<wxs src="../../component/filter.wxs" module="filter"></wxs>
 <!--index.wxml-->
 <view class="deatil-info">
   <view class="info-header">
@@ -9,15 +10,15 @@
     <cover-image src="../../images/reservation/banner-01.png"></cover-image>
     <view class="racing-car-info {{is_my_detail?'racing-car-info-grey':''}}">
       <view class="row">
-        <view class="text-left">难度   <text>中等</text>  </view>
-        <view class="text-right">时间   <text>2019.11.27</text> </view>
+        <view class="text-left">难度   <text>{{info.difficulty}}</text>  </view>
+        <view class="text-right">时间   <text>{{filter.formatDateStr(info.startDate)}}</text> </view>
       </view>
       <view class="row">
-        <view class="text-left">教练   <text>张教授</text>  </view>
-        <view class="text-right">场地   <text>山西国际赛道</text> </view>
+        <view class="text-left">教练   <text>{{info.coach}}</text>  </view>
+        <view class="text-right">场地   <text>{{info.site}}</text> </view>
       </view>
       <view class="row">
-        <view class="text-left">车型   <text>保时捷概念赛车</text>  </view>
+        <view class="text-left">车型   <text>{{info.carType}}</text>  </view>
       </view>
     </view>
   </view>
@@ -33,7 +34,7 @@
       </view>
     </view>
     <view class="precautions-btn" >
-      <view class="btn" wx:if="{{!is_my_detail}}">确认无误</view>
+      <view class="btn" wx:if="{{!is_my_detail}}" bindtap="confirmBtn">确认无误</view>
     </view>
   </view>
 </view>
